# METIS

./: .gitignore  CMakeLists.txt  PERF-REVIEW.md
include/: metis.h
libmetis/: coarsen.c  compress.c  contig.c  kmetis.c  kwayfm.c  macros.h  minconn.c  ometis.c  options.c  pmetis.c  proto.h  struct.h  wspace.c
perf/: .gitignore  RESULTS.md  harness.sh  mem.sh
